# dystopia

./: .gitignore  .terraform.lock.hcl  Dockerfile  LICENSE  Makefile  README.md  app.py  bastion.sh  docker-compose.yml  dystopiarobotics-backend.json  main.tf  requirements.txt  variables.tf
.github/workflows/: sim.yml
catkin_ws/src/my_turtlebot_sim/: CMakeLists.txt  mover.py  my_turtlebot_sim.test  package.xml  test_bot_moves.py
t0pp/: expected_output.md  install_right_torch_a6000.txt  notes.md  single_task_fine_tune.py  t0pp.sh
workflows/: aws.yml
