<?xml version="1.0"?>
<package format="2">
  <name>my_turtlebot_sim</name>
  <version>0.0.1</version>
  <description>The my_turtlebot_sim package</description>
  
  <maintainer email="simon.bracegirdle@mechanicalrock.io">Simon Bracegirdle</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rostest</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
